infra/cluster-bootstrap/istio/backend-permissive.yaml
# Allow PERMISSIVE mTLS for backend to accept traffic from ingress-nginx
# ingress-nginx doesn't have an Istio sidecar, so it can't do mTLS
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: backend-permissive
  namespace: armportal-backend
spec:
  selector:
    matchLabels:
      app: armportal-backend
  mtls:
    mode: PERMISSIVE  # Accept both mTLS and plaintext
