infra/cluster-bootstrap/istio/rabbitmq-permissive.yaml
# Allow PERMISSIVE mTLS for RabbitMQ
# This allows non-mesh services (webhook-relay, ingress-nginx) to connect
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: rabbitmq-permissive
  namespace: rabbit-xp1-dev
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq
  mtls:
    mode: PERMISSIVE  # Accept both mTLS and plaintext
  portLevelMtls:
    # Allow AMQP connections from non-mesh services (webhook-relay)
    5672:
      mode: PERMISSIVE
    # Allow management UI from ingress
    15672:
      mode: PERMISSIVE
